--- a/zero/nav/style.css
+++ b/zero/nav/style.css
@@ -1,3 +1,7 @@
+
+[v-cloak] {
+  display: none;
+}
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -22,8 +26,14 @@ a {
 }
 
 h1 {
+  display: -webkit-flex;
+  display: flex;
   color: #2b2b2b;
   font-size: 24px;
+}
+.logo {
+  margin-right: 10px;
+  height: 60px;
 }
 
 .header {
